task/prefetch-dependencies/0.3/README.md
# prefetch-dependencies task

Task that prefetches dependencies for hermetic build.

## Configuration

Config file must be passed as a YAML string. For all available config options please check Hermeto
[settings](https://hermetoproject.github.io/hermeto/latest/configuration/#settings) documentation.

Example of setting timeouts:

```yaml
params:
  - name: config-file-content
    value: |
      ---
      http:
        connect_timeout: 60
        read_timeout: 3600
```

## Parameters
|name|description|default value|required|
|---|---|---|---|
|input|Configures project packages that will have their dependencies prefetched.||true|
|log-level|Set prefetch tool log level (debug, info, warning, error)|info|false|
|config-file-content|Pass configuration to the prefetch tool. Note this needs to be passed as a YAML-formatted config dump, not as a file path! |""|false|
|sbom-type|Select the SBOM format to generate. Valid values: spdx, cyclonedx.|spdx|false|
|mode|Control how input requirement violations are handled: strict (errors) or permissive (warnings). Valid values: strict, permissive.|strict|false|
|caTrustConfigMapName|The name of the ConfigMap to read CA bundle data from.|trusted-ca|false|
|caTrustConfigMapKey|The name of the key in the ConfigMap that contains the CA bundle data.|ca-bundle.crt|false|
|SERVICE_CA_TRUST_CONFIG_MAP_KEY|The name of the key in the ConfigMap that contains the service CA bundle data. Used to verify TLS connections to in-cluster services such as the package registry proxy.|service-ca.crt|false|
|SERVICE_CA_TRUST_CONFIG_MAP_NAME|The name of the ConfigMap to read service CA bundle data from. Used to verify TLS connections to in-cluster services such as the package registry proxy.|openshift-service-ca.crt|false|
|enable-package-registry-proxy|Use the package registry proxy when prefetching dependencies|true|false|
|ACTIVATION_KEY|Name of secret which contains subscription activation key|activation-key|false|

## Workspaces
|name|description|optional|
|---|---|---|
|source|Workspace with the source code, prefetch artifacts will be stored on the workspace as well|false|
|git-basic-auth|A Workspace containing a .gitconfig and .git-credentials file or username and password. These will be copied to the user's home before prefetch is run. Any other files in this Workspace are ignored. It is strongly recommended to bind a Secret to this Workspace over other volume types. |true|
|netrc|Workspace containing a .netrc file. Prefetch will use the credentials in this file when performing http(s) requests. |true|

## Additional info
